Bug 699656 - LockDistillerParams boolean missing type checks
Summary: LockDistillerParams boolean missing type checks
Status: NOTIFIED FIXED
Alias: None
Product: Ghostscript
Classification: Unclassified
Component: General (show other bugs)
Version: unspecified
Hardware: PC Linux
: P2 critical
Assignee: Default assignee
URL:
Keywords:
: 699663 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-08-21 17:57 UTC by Tavis Ormandy
Modified: 2018-12-14 18:12 UTC (History)
5 users (show)

See Also:
Customer: 501,641
Word Size: ---


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tavis Ormandy 2018-08-21 17:57:36 UTC
The LockDistillerParams boolean isn't type checked, so nice easy type confusion. Repro:

$ gs -q -sDEVICE=ppmraw -dSAFER
GS><< /LockDistillerParams 16#4141414141414141 >> .setdistillerparams
Segmentation fault
Comment 1 Chris Liddell (chrisl) 2018-08-23 11:42:20 UTC
Fixed in:

http://git.ghostscript.com/?p=ghostpdl.git;a=commitdiff;h=c3476dde
Comment 2 Chris Liddell (chrisl) 2018-08-23 11:50:55 UTC
*** Bug 699663 has been marked as a duplicate of this bug. ***